--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -37,5 +37,5 @@
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
   name = "Software"
-  url = "#software"
+  url = "https://mldanalytics.blogspot.com/"
   weight = 70
