--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -36,7 +36,7 @@
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
-  name = "Software"
+  name = "Blog"
   url = "https://mldanalytics.blogspot.com/"
   weight = 70
 
